<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/minimizedControlBar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize" 
    android:orientation="horizontal"
    android:background="@drawable/control_bar_background_rounded"
    android:clipToOutline="true"
    android:outlineProvider="background"
...
